--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -158,7 +158,7 @@
   height: 7rem;
   border-radius: 50%;
   object-fit: cover;
-  object-position: top;
+  object-position: right;
   border: 0.25rem solid var(--background-tertiary);
   box-shadow: var(--box-shadow);
 }
@@ -266,6 +266,10 @@
     &:hover {
       background-color: var(--background-primary);
     }
+  }
+
+  .form_bot-field {
+    display: none;
   }
 }
 
