--- a/css/base/colors.css
+++ b/css/base/colors.css
@@ -38,4 +38,6 @@
 
   --box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   --inset-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.14) inset;
+
+  --time-interval: 0.7s;
 }
