--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -120,6 +120,7 @@
 .section_header {
   position: relative;
   padding-top: 3rem;
+  overflow-x: hidden;
 }
 
 .header_bg-img {
@@ -686,4 +687,27 @@
       }
     }
   }
+}
+
+/* Linis scroll */
+
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
 }
