--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -418,6 +418,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
+  justify-content: center;
 
   a {
     text-decoration: none;
@@ -653,6 +654,11 @@
 
 /* Mobile portrait and below */
 @media screen and (max-width: 479px) {
+  .padding-global {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .header_bg-img {
     &.header_bg-img--2 {
       left: -25rem;
